Bug fixes: Selected textcolor now visible again + some performance updates

--- a/index.less
+++ b/index.less
@@ -3,8 +3,13 @@ atom-text-editor::shadow,
 atom-text-editor .gutter,
 atom-text-editor::shadow .gutter
 {
-	background-color: white;
 	color: #000000;
+	background-color: #C5F2D0;
+}
+
+atom-text-editor
+{
+	filter: saturate(150%);
 }
 
 atom-text-editor .wrap-guide,
@@ -25,8 +30,10 @@ atom-text-editor.is-focused::shadow .cursor
 	border-color: #000000;
 }
 
+
 atom-text-editor.has-selection .selection .region,
 atom-text-editor.has-selection::shadow .selection .region,
+atom-text-editor .selection .region
 {
 	background-color: rgba(251, 235, 212, 0.41);
 }
@@ -216,6 +223,8 @@ atom-text-editor.is-focused::shadow .line.cursor-line
 	color:#7C4625;
 }
 
+
+
 atom-text-editor.editor:not(.mini),
 atom-text-editor.editor:not(.mini)::shadow
 {
@@ -289,11 +298,11 @@ atom-text-editor.editor:not(.mini)::shadow
 
 	.lines
 	{
+		background-image:url('atom://Architect-Syntax-Theme/assets/grid.png') !important;
 		cursor: default;
 		-webkit-filter: saturate(150%);
-		background-color: #C5F2D0;
 	}
-	
+
 	.foldable .icon-right
 	{
 		visibility: visible !important;
@@ -302,7 +311,6 @@ atom-text-editor.editor:not(.mini)::shadow
 
 	.lines > div, .lines
 	{
-		background-image:url('atom://Architect-Syntax-Theme/assets/grid.png') !important;
 		font-weight: 100;
 	}
 
